--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "jest-another-rpg",
   "version": "1.0.0",
@@ -22,5 +21,8 @@
   "homepage": "https://github.com/sgtratchet/jest-another-rpg#readme",
   "devDependencies": {
     "jest": "^26.1.0"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
